tests/transpiler/x/rs/if_then_else.rs
// Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:42 +0700
fn main() {
    let x: i64 = 12;
    let msg: String = if (x > 10) { "yes" } else { "no" };
    println!("{}", msg);
}
